plugins {
    id 'org.springframework.boot' version '2.4.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.jumanji'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '2.4.3'

    implementation group: 'com.auth0', name: 'java-jwt', version: '3.13.0'
    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'


    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.1.1.RELEASE'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'


    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc10', version: '19.10.0.0'
//    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'


    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    implementation 'org.projectlombok:lombok:1.18.16'
    annotationProcessor "org.projectlombok:lombok:1.18.16"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.18'


    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'

    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
    implementation group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.1.7'
    implementation group: 'io.swagger.core.v3', name: 'swagger-models', version: '2.1.7'

    // https://mvnrepository.com/artifact/org.jsoup/jsoup
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.13.1'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'

// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'

//    compile fileTree(dir: 'lib', include: ['*.jar'])
}

test {
    useJUnitPlatform()
}
